[gd_scene load_steps=3 format=3 uid="uid://b23l66l2b1a1t"]

[ext_resource type="Script" path="res://Game.gd" id="1_74136"]
[ext_resource type="Script" path="res://Board.gd" id="2_vj3w1"]

[node name="Game" type="Node2D"]
script = ExtResource("1_74136")

[node name="Board" type="Node2D" parent="."]
script = ExtResource("2_vj3w1")

[node name="Pieces" type="Node2D" parent="."]

[node name="MoveHighlights" type="Node2D" parent="."]

[node name="StatusLabel" type="Label" parent="."]
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 96
text = "XEQUE!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TurnIndicator" type="ColorRect" parent="."]
offset_top = 640.0
offset_right = 640.0
offset_bottom = 680.0
color = Color(1, 1, 1, 1) # White

